# rs-wappalyzer

./: Cargo.toml
.github/workflows/: build-app.yaml
frontend/: .env  .env.tauri  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css  main.tsx  theme.ts
src/: checkers.rs  lib.rs  technology.rs  test.rs  wappalyzer.rs  wapplyzer_regex.rs  webpage.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-wasm/: Cargo.toml
src-wasm/src/: lib.rs
src/checkers/: checker.rs  cookie_checker.rs  header_checker.rs  html_checker.rs  script_src_checker.rs
src/cli/: Cargo.toml
src/cli/src/: main.rs
src/core/: Cargo.toml
src/core/benches/: bench.rs
src/core/src/: checkers.rs  finger_print.rs  lib.rs  technology.rs  wappalyzer.rs  wapplyzer_regex.rs  webpage.rs
src/core/src/checkers/: checker.rs  cookie_checker.rs  dom_checker.rs  header_checker.rs  html_checker.rs  meta_checker.rs  script_src_checker.rs
src/core/tests/: lib.rs  technology.rs  wapplyzer.rs  wapplyzer_regex.rs
src/core/tests/assets/: technology_simple.json
src/core/tests/checkers/: cookie_checker.rs  header_checker.rs  html_checker.rs  meta_checker.rs  script_src_checker.rs
tests/: checkers.rs  lib.rs  technology.rs  test.rs  wapplyzer.rs  wapplyzer_regex.rs
tests/assets/: technology_test.json
tests/checkers/: cookie_checker.rs  header_checker.rs  html_checker.rs  script_src_checker.rs
