[package]
name = "wappalyzer_core"
version = "0.1.0"
edition = "2021"

[dependencies]
rmp-serde = "1.3.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
reqwest = "0.12.5"
fancy-regex = "0.13.0"
html5ever = "0.27.0"
markup5ever_rcdom = "0.3.0"
rayon = "1.10.0"

[dev-dependencies]
tokio = { version = "1.38.0", features = ["full"] }
criterion = { version = "0.5.1", features = ["html_reports", "async_futures", "async"] }

[[bench]]
name = "bench"
harness = false